Pie label truncate fixes and drilldown

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -59,3 +59,12 @@ body {
   width: auto;
   margin-right: 24px;
 }
+
+.pie-display {
+  display: flex;
+  justify-content: space-between;
+  width: 100%
+}
+.pie {
+  width: 33%;
+}
